changed from removeFirst to remove 0 and getFirst to get 0